--- a/index.css
+++ b/index.css
@@ -637,6 +637,7 @@ label{
     .footer-logo img{
         width: 150px;
         height: 50px;
+        margin-left: 20px;
     }
     .footer-logo-button{
         width: 80%;
@@ -660,7 +661,8 @@ label{
         margin-top: 20px;
     }
     .footer-content-01{
-        width: 48%;
+        /* border: 1px solid red; */
+        width: 40%;
     }
     .footer-content-02{
         width: 100%;
